--- a/VRChat/22/1293822.html
+++ b/VRChat/22/1293822.html
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "rOY74gFPSKm3ZcwGSX32rezuY+1dQ+irgrlOKdTFRY0="></script>
+    "+iuOZ6Qj6JdjyCSNPcr6/H6IDf/fR0RWFU9QT1SeJd0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【悪役結社ヴァリアールファンアイテム】ヴァリアライズチョーカー","description":"　バーチャル世界の悪の組織、『悪役結社ヴァリアール』のファン向け公式アイテムが遂に登場。\n\n　恐るべき結社を慕い崇める仮想市民諸君の有様を具象し、『発信機・自爆装置付きの首輪を自ら身に着ける』という形を取らせて貰ったぞ。\n\n　DynamicBoneで揺れるドッグタグに好きな文言を彫り込む方法の指南付きだ。これで貴様も『札付き』という訳だな。尚腕輪等として使っても構わない。\n\nこれを身に着け、より一層結社への忠誠を高めるが良い。\n\n\n\n\n◆VAREAL　LICENSED◆ \n本商品は『ヴァリアールライセンス』認可商品である。\n『ヴァリアールライセンス』とは、バーチャル世界の悪の組織、『悪役結社ヴァリアール』が公式に関連商品と認めたもののみに発行されるロゴマーク及びタグである。 『ヴァリアールライセンス』の詳細は下記URLを参照とする。\nhttps://vrheel.com/license/\n◆VAREAL　LICENSED◆\n\n\n\n\n◆利用規約◆\n本商品単体での再配布、及び本商品を含む３Dモデルの販売を禁ずる。\nアバターの一部、アクセサリーとしてのアップロード及び改変を許可する。\n本商品を含む改変アバターのVRchatにおけるペデスタル設置及びクローニングを許可する。（アバター本体の規約に従うこと）\n有償無償問わず動画配信への映り込みを許可する。クレジット不要。\n政治宗教に関わる利用及び『悪役結社ヴァリアール』の名誉を損ねる利用を禁ずる。\n本モデル使用に伴うトラブルについて当方は一切関知しない。\n\n\n\n使用マテリアル　PBT-Shader　（MITライセンス）\nhttps://yosohuta.booth.pm/items/1266870\n\n","url":"https://booth.pm/ja/items/1293822","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/75409dcf-e181-4290-a053-65156c11a7c3/i/1293822/5653fac4-fd8c-4380-8d61-4a413683a76c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rOY74gFPSKm3ZcwGSX32rezuY+1dQ+irgrlOKdTFRY0="></script>
+    nonce="+iuOZ6Qj6JdjyCSNPcr6/H6IDf/fR0RWFU9QT1SeJd0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -636,7 +636,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
+    "[{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
